--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,6 +7,9 @@
 <!--Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
+<link href="bower_components/angularjs-datepicker/src/css/angular-datepicker.css" rel="stylesheet" type="text/css" />
+
+
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
@@ -14,6 +17,13 @@
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="https://code.angularjs.org/1.3.0/angular-resource.js"></script>
+<script src="bower_components/angularjs-datepicker/src/js/angular-datepicker.js"></script>
+<!-- Google map -->
+<script src="bower_components/angular-ui-event/dist/event.min.js"></script>
+<script src="bower_components/angular-ui-map/src/map.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=onGoogleReady"></script>
+
+
 
 <script src="js/angular/app.js"></script>
 
@@ -22,6 +32,7 @@
 <script src="js/angular/controllers/signin_controller.js"></script>
 <script src="js/angular/controllers/signup_controller.js"></script>
 <script src="js/angular/controllers/navbar_controller.js"></script>
+<!-- <script src="js/angular/controllers/user_controller.js"></script> -->
 
 <!-- custom directives -->
 <script src="js/angular/directives/navbarView.js"></script>
