--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,17 @@
 p {
   text-align: justify;
 }
+
+select {
+    width: 50px;
+    height: 20px;
+   /* margin: 15px;
+    padding: 10px;*/
+    border-radius:6px;
+    color:black;
+    outline:none;
+    cursor:pointer;
+    border: 1px solid #ccc;
+}
+
+.map-canvas { height: 400px; }
