before denis review

--- a/public/templates/attractions/index.html
+++ b/public/templates/attractions/index.html
@@ -10,7 +10,7 @@
 </ol>
 
 
-<h1>Attraction Index</h1>
+<h1>Attractions:</h1>
 
 <div ng-init="getAll()">
 <div ng-repeat="attraction in attractions">
