--- a/public/templates/partials/navbar.html
+++ b/public/templates/partials/navbar.html
@@ -10,7 +10,7 @@
       </button>
           <a class="navbar-brand" href="/">
 
-            <img alt="Brand" src="/img/logo.jpg" class="img-responsive logo">
+            <img alt="Brand" src="/img/AT_logo.jpg" class="img-responsive logo">
 
           </a>
 
@@ -21,12 +21,12 @@
         <li ng-hide="current_user"><a href="/#/signin">Log in</a></li>
         <li ng-show="current_user"><a ng-click="logout()">Log Out</a></li>
         <li><a href="/#/attractions">Attractions</a></li>
-        <li><a href="/#/guides">Guides</a></li>
+        <!-- <li><a href="/#/guides">Guides</a></li> -->
         <li><a href="/#/transfers">Transfer</a></li>
-        <li class="dropdown">
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EN<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">RU</a></li>
+            <li><a href="#">RU</a></li> -->
           </ul>
         </li>
       </ul>
