--- a/public/templates/signup/index.html
+++ b/public/templates/signup/index.html
@@ -1,5 +1,17 @@
 <nav-bar></nav-bar>
-<breadcrumb></breadcrumb>
+
+<ol class="breadcrumb">
+  <li>
+    <a href="#/">Home</a>
+  </li>
+  <li>
+    <a href="#/attractions">Attractions</a>
+  </li>
+  <li class="active">
+    {{ attraction.name}}
+  </li>
+</ol>
+
 <h1>Sign up</h1>
 
 <form ng-submit="submit()" class="form-block" ng-init="sigupForm = {}">
