--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 .logo {
-  width:  60px;
+  width:  200px;
   padding-top: 0px;
-  margin: -10px;
+  margin: -15px;
 }
 
 .dest {
@@ -24,4 +24,5 @@ select {
     border: 1px solid #ccc;
 }
 
-.map-canvas { height: 400px; }
+/*.map-canvas { height: 400px; }*/
+
