--- a/public/templates/attractions/show.html
+++ b/public/templates/attractions/show.html
@@ -35,9 +35,16 @@
             <p><em>How to use:</em><br>{{attraction.use_tkts}}</p>
             <p><em>How To Get There:</em> <br> {{attraction.to_go_there}}</p>
 
-              <section id="map" ng-controller="MapCtrl" >
-                <div ui-map="myMap" ui-options="mapOptions" class="map-canvas"></div>
-              </section>
+              <!-- <div id="map"></div>
+              <script type="text/javascript">
+                  var map;
+                  function initMap() {
+                    map = new google.maps.Map(document.getElementById('map'), {
+                      center: {lat: -34.397, lng: 150.644}, zoom: 8
+                    });
+                  }
+                </script>
+ -->
 
             <a class="btn btn-danger" href="/#/attractions/{{attraction._id}}/book">Book</a>
         </div>
