--- a/public/templates/static/index.html
+++ b/public/templates/static/index.html
@@ -1,21 +1,57 @@
 <nav-bar></nav-bar>
 
 <div align="center">
-<h1>Hong Kong and Macau</h1>
-<h2> Featured Attractions, Guides and Transfers</h2>
+<h2>Hong Kong Featured Attractions, Guides and Transfers</h2>
 <h3>Discover and book amazing things-to-do <strong>at exclusive prices</strong></h3>
+</div>
 
-<h4>Most popular:</h4>
-<div class="row" align="center">
-<!--   <div class="col-sm-6 col-md-8">
-  <h3>Hong Kong</h3>
-  <img src="img/hong-kong-at-night.jpg" class="img-thumbnail img-responsive" alt="Hong Kong"></div>
-  <div class="col-sm-6 col-md-8">
-  <h3>Macau</h3>
-  <img src="img/macau.jpg" alt="Macau" class="img-thumbnail img-responsive"></div>
-</div> -->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="img/ocean-park.jpg" class="img-responsive" alt="Ocean Park">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="img/ngong_ping360.jpg" class="img-responsive"  alt="Ngong Ping">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="img/disney_main.jpg" class="img-responsive"  alt="Disney Land">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    ...
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
 
+
+
+
+<!-- <div class="row" align="center">
 
   <div class="col-sm-5 col-md-6">
     <h3>Hong Kong</h3>
@@ -26,6 +62,5 @@
       <img src="img/macau1.jpg" alt="Macau" class="img-thumbnail img-responsive dest">
     </div>
 </div>
+ -->
 
-
-</div>
