review by Denis, all attractions, one attractio, book, checkout

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -26,6 +26,8 @@
 
 <!-- controllers -->
 <script src="js/angular/controllers/attraction_controller.js"></script>
+<script src="js/angular/controllers/booking_controller.js"></script>
+<script src="js/angular/controllers/checkout_controller.js"></script>
 <script src="js/angular/controllers/signin_controller.js"></script>
 <script src="js/angular/controllers/signup_controller.js"></script>
 <script src="js/angular/controllers/navbar_controller.js"></script>
