--- a/public/templates/attractions/show.html
+++ b/public/templates/attractions/show.html
@@ -1,55 +1,33 @@
-<div ng-init="getOne()">
-
 <nav-bar></nav-bar>
 
 <ol class="breadcrumb">
-  <li>
-    <a href="#/">Home</a>
-  </li>
-  <li>
-    <a href="#/attractions">Attractions</a>
-  </li>
-  <li class="active">
-    {{ attraction.name}}
-  </li>
+  <li><a href="#/">Home</a></li>
+  <li><a href="#/attractions">Attractions</a></li>
+  <li class="active">{{ attraction.name}}</li>
 </ol>
 
+<h1>{{attraction.name}}</h1>
+
 <div class="col-sm-12">
-        <h3>
-          <a href="/#/attractions/{{attraction._id}}">{{attraction.name}}, {{attraction.city}}</a>
-        </h3>
+  <h3><a href="/#/attractions/{{attraction._id}}">{{attraction.name}}, {{attraction.city}}</a></h3>
 
-        <div class="row">
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <a href="/#/attractions/{{attraction._id}}">
-              <img class="img-responsive img-thumbnail" ng-src="{{attraction.picture}}">
-            </a>
-          </div>
+  <div class="row">
+    <div class="col-sm-6 col-md-6 col-lg-6">
+      <a href="/#/attractions/{{attraction._id}}">
+        <img class="img-responsive img-thumbnail" ng-src="{{attraction.picture}}">
+      </a>
+    </div>
 
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <p>{{attraction.description}}</p>
-            <p>Price for adult original:  <strike>{{attraction.price_adult}} HKD</strike>, now <strong style="color:red">{{attraction.price_adult_discount}} HKD</strong> </p>
-            <p>Price for child (3 - 11 years old): <strike> {{attraction.price_child}} HKD</strike>, now <strong style="color:red">{{attraction.price_child_discount}} HKD</strong></p>
-            <!-- <p>Price for adult 2 - days original:  <strike>{{attraction.price_adult_two_days}}</strike>, now <strong style="color:red">{{attraction.price_adult_two_days_discount}} HKD</strong> </p> -->
-            <p><em>Ticket type:</em>  {{attraction.tkts_type}}</p>
-            <p><em>How to use:</em><br>{{attraction.use_tkts}}</p>
-            <p><em>How To Get There:</em> <br> {{attraction.to_go_there}}</p>
+    <div class="col-sm-6 col-md-6 col-lg-6">
+      <p>{{attraction.description}}</p>
+      <p>Price for adult original:  <strike>{{attraction.price_adult}} HKD</strike>, now <strong style="color:red">{{attraction.price_adult_discount}} HKD</strong> </p>
+      <p>Price for child (3 - 11 years old): <strike> {{attraction.price_child}} HKD</strike>, now <strong style="color:red">{{attraction.price_child_discount}} HKD</strong></p>
+      <!-- <p>Price for adult 2 - days original:  <strike>{{attraction.price_adult_two_days}}</strike>, now <strong style="color:red">{{attraction.price_adult_two_days_discount}} HKD</strong> </p> -->
+      <p><em>Ticket type:</em>  {{attraction.tkts_type}}</p>
+      <p><em>How to use:</em><br>{{attraction.use_tkts}}</p>
+      <p><em>How To Get There:</em> <br> {{attraction.to_go_there}}</p>
 
-              <!-- <div id="map"></div>
-              <script type="text/javascript">
-                  var map;
-                  function initMap() {
-                    map = new google.maps.Map(document.getElementById('map'), {
-                      center: {lat: -34.397, lng: 150.644}, zoom: 8
-                    });
-                  }
-                </script>
- -->
-
-            <a class="btn btn-danger" href="/#/attractions/{{attraction._id}}/book">Book</a>
-        </div>
-      </div>
+      <a class="btn btn-danger" href="/#/attractions/{{attraction._id}}/book">Book</a>
     </div>
   </div>
-</div>
 </div>
