--- a/public/templates/signup/index.html
+++ b/public/templates/signup/index.html
@@ -1,15 +1,9 @@
 <nav-bar></nav-bar>
 
 <ol class="breadcrumb">
-  <li>
-    <a href="#/">Home</a>
-  </li>
-  <li>
-    <a href="#/attractions">Attractions</a>
-  </li>
-  <li class="active">
-    {{ attraction.name}}
-  </li>
+  <li><a href="#/">Home</a></li>
+  <li><a href="#/attractions">Attractions</a></li>
+  <li class="active">{{ attraction.name}}</li>
 </ol>
 
 <h1>Sign up</h1>
@@ -23,6 +17,5 @@
     <label class="sr-only" for="exampleInputPassword3">Password</label>
     <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password" ng-model="signupForm.password">
   </div>
-
   <button type="submit" class="btn btn-default">Sign up</button>
 </form>
